--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <label class="form-label fw-bold">Diet:</label>
                 <select id="diet" class="form-select mb-3" name="diet" required>
                     <option value="">Select a Diet</option>
-                    <option>Herbavor</option>
-                    <option>Omnivor</option>
-                    <option>Carnivor</option>
+                    <option>Herbivore</option>
+                    <option>Omnivore</option>
+                    <option>Carnivore</option>
                 </select>
             </div>
             <button type="submit" class="btn btn-secondary">Compare Me!</button>
