Adds the ability to return to the form

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h3>How do you compare?</h3>
     </header>
     <!-- Form to get user input -->
-    <form id="compareForm" class="row" novalidate>
+    <form id="compareForm" class="row mb-3" novalidate>
         <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 bg-light p-5">
             <div class="form-group mb-3">
                 <label class="form-label fw-bold">Name:</label>
@@ -70,6 +70,9 @@
         </div>
     </form>
     <!-- .grid to attach tiles to -->
+    <div class="d-flex justify-content-center mb-3">
+        <button id="return" class="btn btn-primary d-none">Return to Form</button>
+    </div>
     <main id="grid"></main>
     <footer class="text-center">
         <!-- Include information source -->
